; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/be2iscsi/extr_be_iscsi.c_beiscsi_bindconn_cid.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/be2iscsi/extr_be_iscsi.c_beiscsi_bindconn_cid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.beiscsi_hba = type { %struct.beiscsi_conn** }
%struct.beiscsi_conn = type { i32 }

@KERN_ERR = common dso_local global i32 0, align 4
@BEISCSI_LOG_CONFIG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [59 x i8] c"BS_%d : Connection table already occupied. Detected clash\0A\00", align 1
@EINVAL = common dso_local global i32 0, align 4
@KERN_INFO = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [47 x i8] c"BS_%d : phba->conn_table[%d]=%p(beiscsi_conn)\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.beiscsi_hba*, %struct.beiscsi_conn*, i32)* @beiscsi_bindconn_cid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @beiscsi_bindconn_cid(%struct.beiscsi_hba* %0, %struct.beiscsi_conn* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.beiscsi_hba*, align 8
  %6 = alloca %struct.beiscsi_conn*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  store %struct.beiscsi_hba* %0, %struct.beiscsi_hba** %5, align 8
  store %struct.beiscsi_conn* %1, %struct.beiscsi_conn** %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load i32, i32* %7, align 4
  %10 = call i64 @BE_GET_CRI_FROM_CID(i32 %9)
  store i64 %10, i64* %8, align 8
  %11 = load %struct.beiscsi_hba*, %struct.beiscsi_hba** %5, align 8
  %12 = getelementptr inbounds %struct.beiscsi_hba, %struct.beiscsi_hba* %11, i32 0, i32 0
  %13 = load %struct.beiscsi_conn**, %struct.beiscsi_conn*** %12, align 8
  %14 = load i64, i64* %8, align 8
  %15 = getelementptr inbounds %struct.beiscsi_conn*, %struct.beiscsi_conn** %13, i64 %14
  %16 = load %struct.beiscsi_conn*, %struct.beiscsi_conn** %15, align 8
  %17 = icmp ne %struct.beiscsi_conn* %16, null
  br i1 %17, label %18, label %25

18:                                               ; preds = %3
  %19 = load %struct.beiscsi_hba*, %struct.beiscsi_hba** %5, align 8
  %20 = load i32, i32* @KERN_ERR, align 4
  %21 = load i32, i32* @BEISCSI_LOG_CONFIG, align 4
  %22 = call i32 (%struct.beiscsi_hba*, i32, i32, i8*, ...) @beiscsi_log(%struct.beiscsi_hba* %19, i32 %20, i32 %21, i8* getelementptr inbounds ([59 x i8], [59 x i8]* @.str, i64 0, i64 0))
  %23 = load i32, i32* @EINVAL, align 4
  %24 = sub nsw i32 0, %23
  store i32 %24, i32* %4, align 4
  br label %39

25:                                               ; preds = %3
  %26 = load %struct.beiscsi_hba*, %struct.beiscsi_hba** %5, align 8
  %27 = load i32, i32* @KERN_INFO, align 4
  %28 = load i32, i32* @BEISCSI_LOG_CONFIG, align 4
  %29 = load i64, i64* %8, align 8
  %30 = load %struct.beiscsi_conn*, %struct.beiscsi_conn** %6, align 8
  %31 = call i32 (%struct.beiscsi_hba*, i32, i32, i8*, ...) @beiscsi_log(%struct.beiscsi_hba* %26, i32 %27, i32 %28, i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str.1, i64 0, i64 0), i64 %29, %struct.beiscsi_conn* %30)
  %32 = load %struct.beiscsi_conn*, %struct.beiscsi_conn** %6, align 8
  %33 = load %struct.beiscsi_hba*, %struct.beiscsi_hba** %5, align 8
  %34 = getelementptr inbounds %struct.beiscsi_hba, %struct.beiscsi_hba* %33, i32 0, i32 0
  %35 = load %struct.beiscsi_conn**, %struct.beiscsi_conn*** %34, align 8
  %36 = load i64, i64* %8, align 8
  %37 = getelementptr inbounds %struct.beiscsi_conn*, %struct.beiscsi_conn** %35, i64 %36
  store %struct.beiscsi_conn* %32, %struct.beiscsi_conn** %37, align 8
  br label %38

38:                                               ; preds = %25
  store i32 0, i32* %4, align 4
  br label %39

39:                                               ; preds = %38, %18
  %40 = load i32, i32* %4, align 4
  ret i32 %40
}

declare dso_local i64 @BE_GET_CRI_FROM_CID(i32) #1

declare dso_local i32 @beiscsi_log(%struct.beiscsi_hba*, i32, i32, i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
